--- a/client/GymBros/package.json
+++ b/client/GymBros/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.9",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
